--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -60,8 +60,7 @@
 
                 <shape>
                     <Rectangle width="${infoBoxContainer.width}" height="${infoBoxContainer.height}"
-                               arcHeight="$shapeArc"
-                               arcWidth="$shapeArc"/>
+                               arcHeight="$shapeArc" arcWidth="$shapeArc"/>
                 </shape>
 
                 <Label fx:id="welcomeText" styleClass="welcome-text" GridPane.fillWidth="true"
