--- a/src/main/resources/it.polimi.ingsw/layout/connection/connection-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/connection/connection-page.fxml
@@ -82,8 +82,9 @@
                            GridPane.rowIndex="2" GridPane.columnIndex="1" GridPane.valignment="CENTER"
                            GridPane.halignment="LEFT"/>
 
-                <MyShelfieButton text="Submit" GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="2"
-                                 GridPane.halignment="CENTER" GridPane.valignment="CENTER" cache="true" wrapText="true"/>
+                <MyShelfieButton fx:id="submitButton" text="Submit" GridPane.rowIndex="3" GridPane.columnIndex="0"
+                                 GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
+                                 cache="true" wrapText="true" onMouseClicked="#submitButtonClicked"/>
             </GridPane>
 
         </StackPane>
