--- a/src/main/resources/it.polimi.ingsw/layout/connection/connection-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/connection/connection-page.fxml
@@ -73,18 +73,18 @@
 
                 <TextField fx:id="serverAddressField" styleClass="connection-input" promptText="Insert server address"
                            GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.valignment="CENTER"
-                           GridPane.halignment="LEFT"/>
+                           GridPane.halignment="LEFT" onKeyPressed="#textFieldKeyPressed"/>
 
                 <Label fx:id="portLabel" styleClass="info-text" text="Port number:" GridPane.halignment="RIGHT"
                        GridPane.valignment="CENTER" wrapText="true" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
 
                 <TextField fx:id="portNumberField" styleClass="connection-input" promptText="Insert port number"
                            GridPane.rowIndex="2" GridPane.columnIndex="1" GridPane.valignment="CENTER"
-                           GridPane.halignment="LEFT"/>
+                           GridPane.halignment="LEFT" onKeyPressed="#textFieldKeyPressed"/>
 
                 <MyShelfieButton fx:id="submitButton" text="Submit" GridPane.rowIndex="3" GridPane.columnIndex="0"
                                  GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
-                                 cache="true" wrapText="true" onMouseClicked="#submitButtonClicked"/>
+                                 cache="true" wrapText="true" onMouseClicked="#submitButtonClicked" onKeyPressed="#connectionSubmitted"/>
             </GridPane>
 
         </StackPane>
