--- a/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/login/login-page.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import java.lang.Double?>
 <?import it.polimi.ingsw.view.gui.MyShelfieButton?>
-<AnchorPane fx:id="rootPane" cache="true" stylesheets="@LoginPage.css"
+<AnchorPane fx:id="loginRootPane" cache="true" stylesheets="@LoginPage.css"
             xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.polimi.ingsw.view.gui.loginpage.LoginPageController" onMouseClicked="#setAllNonFocused">
 
@@ -15,7 +15,7 @@
         <Double fx:id="shapeArc" fx:value="17.0"/>
     </fx:define>
 
-    <GridPane fx:id="interfaceGrid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+    <GridPane fx:id="loginInterfaceGrid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
               AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS" percentWidth="17"/>
@@ -28,7 +28,7 @@
             <RowConstraints vgrow="ALWAYS" percentHeight="7"/>
         </rowConstraints>
 
-        <Pane fx:id="myShelfieTitleImageView" GridPane.fillHeight="true" GridPane.fillWidth="true"
+        <Pane fx:id="loginTitleImageView" GridPane.fillHeight="true" GridPane.fillWidth="true"
               GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" GridPane.columnIndex="0" GridPane.rowIndex="0"
               GridPane.valignment="CENTER" GridPane.halignment="CENTER"
               GridPane.columnSpan="3">
@@ -37,15 +37,15 @@
             </GridPane.margin>
         </Pane>
 
-        <StackPane fx:id="infoBoxContainer" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+        <StackPane fx:id="loginInfoBoxContainer" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.halignment="CENTER"
                    GridPane.valignment="CENTER" GridPane.fillHeight="true" GridPane.fillWidth="true" cache="true">
 
             <shape>
-                <Rectangle width="${infoBoxContainer.width}" height="${infoBoxContainer.height}" arcHeight="$shapeArc"
+                <Rectangle width="${loginInfoBoxContainer.width}" height="${loginInfoBoxContainer.height}" arcHeight="$shapeArc"
                            arcWidth="$shapeArc"/>
             </shape>
 
-            <GridPane fx:id="infoContainer" alignment="CENTER" StackPane.alignment="CENTER" cache="true" vgap="5">
+            <GridPane fx:id="loginInfoContainer" alignment="CENTER" StackPane.alignment="CENTER" cache="true" vgap="5">
                 <columnConstraints>
                     <ColumnConstraints hgrow="ALWAYS" percentWidth="17"/>
                     <ColumnConstraints hgrow="ALWAYS" percentWidth="33"/>
@@ -59,57 +59,57 @@
                 </rowConstraints>
 
                 <shape>
-                    <Rectangle width="${infoBoxContainer.width}" height="${infoBoxContainer.height}"
+                    <Rectangle width="${loginInfoBoxContainer.width}" height="${loginInfoBoxContainer.height}"
                                arcHeight="$shapeArc" arcWidth="$shapeArc"/>
                 </shape>
 
-                <Label fx:id="welcomeText" styleClass="welcome-text" GridPane.fillWidth="true"
+                <Label fx:id="loginWelcomeText" styleClass="welcome-text" GridPane.fillWidth="true"
                        GridPane.fillHeight="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
                        GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" alignment="CENTER" contentDisplay="CENTER"
                        text="Welcome to My Shelfie!&#13;Please enter your nick name to start playing"
                        textAlignment="CENTER" wrapText="true" GridPane.columnSpan="4" GridPane.rowIndex="0"
                        GridPane.columnIndex="0"/>
 
-                <Label fx:id="playerNumberText" styleClass="welcome-text" GridPane.fillWidth="true"
+                <Label fx:id="loginPlayerNumberText" styleClass="welcome-text" GridPane.fillWidth="true"
                        GridPane.fillHeight="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER"
                        GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" alignment="CENTER" contentDisplay="CENTER"
                        text="Choose the maximum number of player in the game" visible="false" disable="true"
                        textAlignment="CENTER" wrapText="true" GridPane.columnSpan="4" GridPane.rowIndex="0"
                        GridPane.columnIndex="0"/>
 
-                <TextField fx:id="nicknameInput" styleClass="nick-input" alignment="CENTER"
+                <TextField fx:id="loginNicknameInput" styleClass="nick-input" alignment="CENTER"
                            promptText="Nickname" GridPane.columnIndex="1" GridPane.rowIndex="1"
                            GridPane.halignment="CENTER" GridPane.valignment="CENTER"
                            GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.columnSpan="2"
                            onKeyPressed="#textFieldKeyPressed"/>
 
-                <TextField fx:id="playerNumberInput" styleClass="nick-input" alignment="CENTER"
+                <TextField fx:id="loginPlayerNumberInput" styleClass="nick-input" alignment="CENTER"
                            promptText="Players number" GridPane.columnIndex="1" GridPane.rowIndex="1"
                            GridPane.halignment="CENTER" GridPane.valignment="CENTER"
                            GridPane.fillWidth="true" GridPane.fillHeight="true" GridPane.columnSpan="2"
                            onKeyPressed="#textFieldKeyPressed" visible="false" disable="true"/>
 
-                <MyShelfieButton fx:id="createButton" GridPane.halignment="CENTER"
-                        GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
-                        GridPane.columnIndex="1" GridPane.rowIndex="2" text="Create game"
-                        onMouseClicked="#createGameSubmitted" disable="true" alignment="CENTER" cache="true"
-                        wrapText="true" onKeyPressed="#createGameSubmitted"/>
+                <MyShelfieButton fx:id="loginCreateButton" GridPane.halignment="CENTER"
+                                 GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
+                                 GridPane.columnIndex="1" GridPane.rowIndex="2" text="Create game"
+                                 onMouseClicked="#createGameSubmitted" disable="true" alignment="CENTER" cache="true"
+                                 wrapText="true" onKeyPressed="#createGameSubmitted"/>
 
-                <MyShelfieButton fx:id="joinButton" GridPane.halignment="CENTER"
-                        GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
-                        GridPane.columnIndex="2" GridPane.rowIndex="2" text="Join game"
-                        onMouseClicked="#joinGameSubmitted" disable="true" alignment="CENTER" cache="true"
-                        wrapText="true" onKeyPressed="#joinGameSubmitted"/>
+                <MyShelfieButton fx:id="loginJoinButton" GridPane.halignment="CENTER"
+                                 GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
+                                 GridPane.columnIndex="2" GridPane.rowIndex="2" text="Join game"
+                                 onMouseClicked="#joinGameSubmitted" disable="true" alignment="CENTER" cache="true"
+                                 wrapText="true" onKeyPressed="#joinGameSubmitted"/>
 
-                <MyShelfieButton fx:id="playerNumberButton" GridPane.halignment="CENTER"
-                        GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
-                        GridPane.columnIndex="1" GridPane.rowIndex="2" text="Submit"
-                        onMouseClicked="#playerNumberSubmitted" disable="true" alignment="CENTER" cache="true"
-                        wrapText="true" GridPane.columnSpan="2" visible="false" onKeyPressed="#playerNumberSubmitted"/>
+                <MyShelfieButton fx:id="loginPlayerNumberButton" GridPane.halignment="CENTER"
+                                 GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" GridPane.hgrow="ALWAYS"
+                                 GridPane.columnIndex="1" GridPane.rowIndex="2" text="Submit"
+                                 onMouseClicked="#playerNumberSubmitted" disable="true" alignment="CENTER" cache="true"
+                                 wrapText="true" GridPane.columnSpan="2" visible="false" onKeyPressed="#playerNumberSubmitted"/>
             </GridPane>
         </StackPane>
 
-        <Pane fx:id="cranioCreationLogo" GridPane.fillHeight="true" GridPane.fillWidth="true"
+        <Pane fx:id="loginPublisherLogo" GridPane.fillHeight="true" GridPane.fillWidth="true"
               GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" GridPane.rowIndex="2" GridPane.columnIndex="2"
               GridPane.valignment="CENTER" GridPane.halignment="RIGHT">
         </Pane>
