Created package for custom components. Modified all classes that were using the class MyShelfieAlertCreator.java, MyShelfieButton.java and TileSubjectView.java accordingly to the new package created. Introduced some classes that help the personalization of custom components and defined various standard decorations to the component

--- a/src/main/resources/it.polimi.ingsw/layout/connection/connection-page.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/connection/connection-page.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.collections.FXCollections?>
-<?import it.polimi.ingsw.view.gui.MyShelfieButton?>
+<?import it.polimi.ingsw.view.gui.customcomponents.MyShelfieButton?>
 <StackPane fx:id="connectionRootPane" xmlns="http://javafx.com/javafx"
            xmlns:fx="http://javafx.com/fxml"
            fx:controller="it.polimi.ingsw.view.gui.connectioninterface.ConnectionPageController"
