Renamed package uitoolkit to guitoolkit updated tile box selected color. Removed unnecessary import in GameInterfaceController. Included the game interface in main interface layout. Removed unnecessary import in MyShelfieAlertCreator. Updated customcomponents package class according to the new package guitoolkit

--- a/src/main/resources/it.polimi.ingsw/layout/maininterface/main-interface.fxml
+++ b/src/main/resources/it.polimi.ingsw/layout/maininterface/main-interface.fxml
@@ -14,7 +14,7 @@
                 AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                 AnchorPane.topAnchor="0.0" fitToWidth="true">
         <VBox fx:id="scrollContentBox" alignment="CENTER">
-            <!--<fx:include fx:id="gameInterface" source="my-shelfie-game-interface.fxml"/>-->
+            <fx:include fx:id="gameInterface" source="../gameinterface/game-interface.fxml"/>
         </VBox>
     </ScrollPane>
 
