Removed in BoardView.java the automatic fill in of tiles. Updated the method that is used to fill up the living room board in BoardViewController.java Updated the Bookshelf.css to fit up a new version of the bookshelf. Deleted static bookshelf view construction (bookshelf.fxml) Created a new version of BookshelfController.java that can now be extended by new classes: PersonalBookshelfController and OpponentBookShelfController Created a BookshelfView that constructs a graphical component representing the bookshelf. Updated game-interface.fxml, GameInterfaceController. Fixed a bug in MyShelfieApplication that was using LoginPage as a calling to resources. Removed an unused field in MyShelfieController Minor changes to MyShelfieDecoration Created class OpponentBookShelfController to manage interactions done by other players during a match Created an opponents-bookshelf.fxml that will construct bookshelf for other players updated personal-bookshelf.fxml view that displays the personal bookshelf Changed the name of BookshelfCommandController.java to PersonalBookshelfController.java. Updated TileBoxChildListener and TileSubjectView to fix a bug that activates all tiles on board when they are put in the bookshelf

--- a/src/main/resources/it.polimi.ingsw/layout/bookshelf/Bookshelf.css
+++ b/src/main/resources/it.polimi.ingsw/layout/bookshelf/Bookshelf.css
@@ -1,10 +1,7 @@
 #bookshelfGrid {
     -fx-padding: 2em 3.6em 3.8em 3.7em;
     -fx-hgap: 0.6em;
-}
-
-.item_tile_bookshelf_cell {
-    -fx-padding: 2em;
+    -fx-grid-lines-visible: true;
 }
 
 #bookshelfImagePane {
@@ -12,4 +9,14 @@
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
     -fx-padding: 17em 17em 17em 17em;
+}
+
+.filled_bookshelf_cell {
+    -fx-padding: 0.1em;
+    -fx-background-color: rgba(101, 61, 30, 0.37);
+}
+
+.empty_bookshelf_cell {
+    -fx-padding: 2em;
+    -fx-background-color: transparent;
 }
