Fixed a bug in LoginPage.css that prevent the application to show the background image

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -5,7 +5,7 @@
     src: local('Special Elite') url('../../graphical.resources/font/SpecialElite-Regular.ttf');
 }
 
-#rootPane {
+#loginRootPane {
     -fx-background-image: url('../../graphical.resources/publisher.material/display_5.jpg');
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover;
