Fixed a bug in BoardViewController that prevents from selecting the correct tiles in the graphical view. Added some methods in BookshelfView to transform the graphical bookshelf in a TileSubject matrix. CHanged name method for handling submit operations in game-interface.fxml and GameInterfaceController.java Added a way to managed active tiles on board according to the methods contained in InputCheck.java Updated module-info.java Updated the javadoc for MyShelfieComponent CHanged the name of MyShelfieLightBorder.java to MyShelfieRustBorder Added a method in PersonalBookshelfController.java to retrieve the personal bookshelf as a matrix Minor improvements in TileBoxChildListener.java Fixed a bug in TileSubjectView.java: when the tile was clicked twice without exiting the tile the highlight did not work

--- a/src/main/resources/it.polimi.ingsw/gui/layout/gameinterface/game-interface.fxml
+++ b/src/main/resources/it.polimi.ingsw/gui/layout/gameinterface/game-interface.fxml
@@ -49,7 +49,7 @@
             <MyShelfieButton fx:id="myShelfieButton" text="Fill board" onMouseClicked="#fillBoard"/>
 
             <MyShelfieButton fx:id="confirmButton" text="Confirm choice" iconName="play-icon.png"
-                             onMouseClicked="#handleTileAction"/>
+                             onMouseClicked="#handleSubmitAction"/>
 
             <MyShelfieButton fx:id="reverseButton" text="Reverse" iconName="reset-icon.png"
                              onMouseClicked="#handleReverseAction"/>
